# bejzak_engine

./: .clang-format  .clang-tidy  CMakeLists.txt
common/camera/: CMakeLists.txt  camera.cpp  camera.h  camera_controller.h  camera_impl.cpp  camera_impl.h  orthographic_projection.cpp  orthographic_projection.h  perspective_projection.cpp  perspective_projection.h  projection.h
common/entity_component_system/: CMakeLists.txt
common/file/: CMakeLists.txt  android_file_loader.cpp  android_file_loader.h  file_loader.h  standard_file_loader.cpp  standard_file_loader.h
common/input_manager/: CMakeLists.txt  mouse_keyboard_manager.h  mouse_keyboard_manager_glfw.cpp  mouse_keyboard_manager_glfw.h
common/model_loader/: CMakeLists.txt  model_loader.h
common/window/: CMakeLists.txt  window.h  window_glfw.cpp  window_glfw.h
openxr_lib/instance/: CMakeLists.txt  instance.cpp  instance.h
openxr_lib/platform/: CMakeLists.txt  android_platform.cpp  android_platform.h  platform.h
openxr_wrapper/graphics_plugin/: CMakeLists.txt  graphics_plugin.h  graphics_plugin_vulkan.cpp  graphics_plugin_vulkan.h  temporal_renderer.h
openxr_wrapper/instance/: CMakeLists.txt  instance.cpp  instance.h
openxr_wrapper/platform/: CMakeLists.txt  android_platform.cpp  android_platform.h  platform.h
openxr_wrapper/session/: CMakeLists.txt  session.cpp  session.h
openxr_wrapper/swapchain/: CMakeLists.txt  swapchain.cpp  swapchain.h
openxr_wrapper/system/: CMakeLists.txt  system.cpp  system.h
sources/: CMakeLists.txt  main.cpp
sources/application/: CMakeLists.txt  application.cpp  application.h  application_base.cpp  application_base.h  double_screenshot_application.cpp  double_screenshot_application.h
sources/camera/: CMakeLists.txt  fps_camera.cpp  fps_camera.h
sources/command_buffer/: CMakeLists.txt  command_buffer.cpp  command_buffer.h
sources/config/: config.h
sources/debug_messenger/: CMakeLists.txt  debug_messenger.cpp  debug_messenger.h  debug_messenger_utils.cpp
sources/descriptor_set/: CMakeLists.txt  bindless_descriptor_set_writer.cpp  bindless_descriptor_set_writer.h  bindless_descriptor_writer.cpp  descriptor_binding_manager.cpp  descriptor_binding_manager.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_set_writer.cpp  descriptor_set_writer.h  descriptor_set_writer_lib.h
sources/framebuffer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h
sources/instance/: CMakeLists.txt  extensions.h  instance.cpp  instance.h
sources/logical_device/: CMakeLists.txt  logical_device.cpp  logical_device.h
sources/memory_allocator/: CMakeLists.txt  allocation.h  memory_allocator.cpp  memory_allocator.h
sources/memory_objects/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_deallocator.h  buffers.cpp  buffers.h  image.h  index_buffer.cpp  index_buffer.h  staging_buffer.cpp  staging_buffer.h  texture.cpp  texture.h  vertex_buffer.cpp  vertex_buffer.h
sources/model_loader/: CMakeLists.txt  model_loader.cpp  model_loader.h
sources/object/: CMakeLists.txt  object.h
sources/physical_device/: CMakeLists.txt  physical_device.cpp  physical_device.h  property_manager.cpp  property_manager.h
sources/pipeline/: CMakeLists.txt  compute_pipeline.cpp  graphics_pipeline.h  input_description.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h
sources/primitives/: CMakeLists.txt  primitives.h  vertex_builder.cpp  vertex_builder.h
sources/render_pass/: CMakeLists.txt  attachment_layout.cpp  attachment_layout.h  render_pass.cpp  render_pass.h
sources/resource_manager/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  resource_manager.cpp  resource_manager.h
sources/scene/: CMakeLists.txt  octree.cpp  octree.h
sources/screenshot/: CMakeLists.txt
sources/status/: CMakeLists.txt  status.cpp  status.h
sources/surface/: CMakeLists.txt  surface.cpp  surface.h
sources/swapchain/: CMakeLists.txt  swapchain.cpp  swapchain.h
sources/tests/: CMakeLists.txt
sources/thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h
sources/window/: CMakeLists.txt  input.h  window.cpp  window.h  window_glfw.cpp  window_glfw.h
vulkan_lib/render_pass/: CMakeLists.txt  attachment_layout.cpp  render_pass.cpp  render_pass.h
vulkan_wrapper/: CMakeLists.txt
vulkan_wrapper/camera/: CMakeLists.txt  camera.h  fps_camera.h
vulkan_wrapper/command_buffer/: CMakeLists.txt  command_buffer.cpp  command_buffer.h
vulkan_wrapper/debug_messenger/: CMakeLists.txt  debug_messenger.cpp  debug_messenger.h  debug_messenger_utils.cpp  debug_messenger_utils.h
vulkan_wrapper/descriptor_set/: CMakeLists.txt  bindless_descriptor_set_writer.cpp  bindless_descriptor_set_writer.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_set_writer.cpp  descriptor_set_writer.h
vulkan_wrapper/entity_component_system/: CMakeLists.txt
vulkan_wrapper/framebuffer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h
vulkan_wrapper/instance/: CMakeLists.txt  extensions.h  instance.cpp  instance.h
vulkan_wrapper/logical_device/: CMakeLists.txt  extensions_connector.cpp  extensions_connector.h  logical_device.cpp  logical_device.h
vulkan_wrapper/memory_allocator/: CMakeLists.txt  allocation.h  memory_allocator.cpp  memory_allocator.h
vulkan_wrapper/memory_objects/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_deallocator.h  buffers.cpp  buffers.h  image.h  texture.cpp  texture.h
vulkan_wrapper/model_loader/: CMakeLists.txt  model_loader.h
vulkan_wrapper/object/: CMakeLists.txt  object.cpp  object.h
vulkan_wrapper/physical_device/: CMakeLists.txt  physical_device.cpp  physical_device.h
vulkan_wrapper/pipeline/: CMakeLists.txt  compute_pipeline.cpp  compute_pipeline.h  graphics_pipeline.cpp  graphics_pipeline.h  input_description.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h
vulkan_wrapper/primitives/: CMakeLists.txt  geometry.h  vertex_builder.cpp  vertex_builder.h
(+315 files in other folders)
