if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
endif()

add_subdirectory(instance)
add_subdirectory(surface)
add_subdirectory(debug_messenger)
add_subdirectory(physical_device)
add_subdirectory(logical_device)
add_subdirectory(memory_allocator)
add_subdirectory(memory_objects)
add_subdirectory(render_pass)
add_subdirectory(swapchain)
add_subdirectory(command_buffer)
add_subdirectory(pipeline)
add_subdirectory(model_loader)
add_subdirectory(descriptor_set)
add_subdirectory(scene)
add_subdirectory(framebuffer)
add_subdirectory(resource_manager)

add_subdirectory(tests)
